=== End merge of squirrelfish ===

2008-05-21  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Tim Hatcher.
        
        Merged with trunk WebCore's new debugger.

        * kjs/DebuggerCallFrame.cpp:
        (KJS::DebuggerCallFrame::evaluate): Changed this function to separate
        the exception value from the return value. The WebKit debugger treats
        them as one, but the WebCore debugger doesn't.

        * kjs/DebuggerCallFrame.h:
        (KJS::DebuggerCallFrame::dynamicGlobalObject): Added a new accessor for
        the dynamic global object, since the debugger doesn't want the lexical
        global object.

2008-05-21  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Bug 19116: SquirrelFish shouldn't regress on variable lookups
        <https://bugs.webkit.org/show_bug.cgi?id=19116>

        Optimise cross scope assignment, 0.4% progression in sunspider.

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitPutScopedVar):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * VM/Opcode.h:
        * kjs/nodes.cpp:
        (KJS::AssignResolveNode::emitCode):

2008-05-21  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        - check property map before symbol table in JSGlobalObject::getOwnPropertySlot
        0.5% speedup on SunSpider

        * kjs/JSGlobalObject.h:
        (KJS::JSGlobalObject::getOwnPropertySlot): Check property map before symbol table
        because symbol table access is likely to have been optimized.

2008-05-21  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Bug 19116: SquirrelFish shouldn't regress on variable lookups
        <https://bugs.webkit.org/show_bug.cgi?id=19116>

        Optimise multiscope lookup of statically resolvable function calls.
        SunSpider reports a 1.5% improvement, including 37% on 