@@ -112,6 +112,8 @@ __ZN3KJS13CodeGenerator21setDumpsGeneratedCodeEb
 __ZN3KJS13StatementNode6setLocEii
 __ZN3KJS13jsOwnedStringERKNS_7UStringE
 __ZN3KJS14JSGlobalObject10globalExecEv
+__ZN3KJS14JSGlobalObject12defineGetterEPNS_9ExecStateERKNS_10IdentifierEPNS_8JSObjectE
+__ZN3KJS14JSGlobalObject12defineSetterEPNS_9ExecStateERKNS_10IdentifierEPNS_8JSObjectE
 __ZN3KJS14JSGlobalObject16stopTimeoutCheckEv
 __ZN3KJS14JSGlobalObject17putWithAttributesEPNS_9ExecStateERKNS_10IdentifierEPNS_7JSValueEj
 __ZN3KJS14JSGlobalObject17startTimeoutCheckEv
@@ -198,6 +200,8 @@ __ZN3KJS8JSObject4callEPNS_9ExecStateEPS0_RKNS_4ListE
 __ZN3KJS8JSObject4markEv
 __ZN3KJS8JSObject9constructEPNS_9ExecStateERKNS_4ListE
 __ZN3KJS8JSObject9constructEPNS_9ExecStateERKNS_4ListERKNS_10IdentifierERKNS_7UStringEi
+__ZN3KJS8Profiler13stopProfilingEPNS_9ExecStateERKNS_7UStringE
+__ZN3KJS8Profiler14startProfilingEPNS_9ExecStateERKNS_7UStringE
 __ZN3KJS8Profiler8profilerEv
 __ZN3KJS8jsStringEPKc
 __ZN3KJS8jsStringERKNS_7UStringE
@@ -207,8 +211,6 @@ __ZN3KJS9Collector17globalObjectCountEv
 __ZN3KJS9Collector20protectedObjectCountEv
 __ZN3KJS9Collector23collectOnMainThreadOnlyEPNS_7JSValueE
 __ZN3KJS9Collector25protectedObjectTypeCountsEv
-__ZN3KJS8Profiler13stopProfilingEPNS_9ExecStateERKNS_7UStringE
-__ZN3KJS8Profiler14startProfilingEPNS_9ExecStateERKNS_7UStringE
 __ZN3KJS9Collector26protectedGlobalObjectCountEv
 __ZN3KJS9Collector4sizeEv
 __ZN3KJS9Collector7collectEv
